--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          
-    package="io.novajox.androidlessons"
-    >
+    package="io.novajox.androidlessons">
 
+    <!--> This is where application permission will be registered <-->
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <!--> This is where different activities will be registered <-->
     </application>
 
 </manifest>
