Create a second activity [Intent] Use the intent to create a link to an other activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".ActivitySecond" />
+        
     </application>
 
 </manifest>
