This step will call github and start a new activity [WS] Add manager, create models.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    compile 'com.google.code.gson:gson:2.8.2'
 
     // this is where you add the different librarie your application will use
 }
