This step will show how to create a simple list of items [RecyclerView] This a a custom component provided by google. You need an adapter, a layoutmanager, and a layout for your item.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!--> This is where different activities will be registered <-->
 
-        <activity android:name=".app.ActivitySyncGitRepos">
+        <activity android:name=".ui.ActivitySyncGitRepos">
             <!--> This tells the application that the ActivitySyncGitRepos will be started first when you launch the application <-->
 
             <intent-filter>
@@ -25,7 +25,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".app.ActivitySecond" />
+        <activity android:name=".ui.ActivitySecond" />
 
     </application>
 
