--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         maven {
             url "https://maven.google.com"
         }
+        maven { url "https://www.jitpack.io" }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -21,6 +23,8 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven { url "https://www.jitpack.io" }
+
     }
 }
 
