--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,12 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+
+systemProp.https.nonProxyHosts=*.subsidia.org|*.withoxylane.com
+systemProp.https.proxyPort=80
+systemProp.https.proxyHost=gateway.zscaler.net
+systemProp.http.nonProxyHosts=*.subsidia.org|*.withoxylane.com
+systemProp.http.proxyPort=80
+systemProp.http.proxyHost=gateway.zscaler.net
